--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ body {
     border-radius: 50%;
     background-color: antiquewhite;
     position: relative;
-    top: 30px;
+    top: 75px;
     right: 20px;
 }
 
@@ -34,15 +34,18 @@ body {
 
 .cone-coat {
     margin: 0 auto;
-    width: 250px;
-    height: 100px;
+    width: 193px;
+    height: 38px;
     background-color: lightblue;
     position: relative;
     overflow: hidden;
-    border-radius: 50%;
-  }
+    border-radius: 70%;
+    top: 31px;
+    right: 17px;
+    z-index: 2;
+}
   
-  .cone-coat:after {
+.cone-coat:after {
     content: "";
     position: absolute;
     bottom: 0;
@@ -51,5 +54,28 @@ body {
     height: 120px;
     background: transparent;
     -webkit-clip-path: ellipse(50% 60% at 50% 100%);
-    clip-path: ellipse(50% 60% at 50% 100%);
-  }
+    clip-path: ellipse(50% 50% at 50% 100%);
+}
+
+.bite {
+    width: 50px;
+    height: 50px;
+    background: #FF8080;
+    border-radius: 50%;
+    position: relative;
+}
+
+/* Individual bite positions */
+.one {
+    left: 10px;
+}
+
+.two {
+    right: -4px;
+    bottom: 20px;
+}
+
+.three {
+    bottom: 51px;
+    right: 16px;
+}
