--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,8 @@
+/* TODO: Add variables for colors */
+
 body {
     background-color: #FF8080;
+    /* background-color: #FED766; */
     width: 100%;
     height: 100%;
 }
@@ -7,7 +10,7 @@ body {
 /* The div that holds happy-icecream */
 .happy-icecream {
     position: absolute;
-    top: 30%;
+    top: 15%;
     left: 45%;
     right: 50%;
 }
@@ -20,6 +23,39 @@ body {
     position: relative;
     top: 75px;
     right: 20px;
+}
+
+/* Cherry on scoop */
+.cherry {
+    width: 57px;
+    height: 55px;
+    background: red;
+    border-radius: 50%;
+    z-index: 5;
+    position: relative;
+    left: 50px;
+    top: 97px;
+    box-shadow: 0px 3px 1px darkred;
+}
+
+.cherry-stem {
+    position: relative;
+    width: 0;
+    height: 0;
+    transform: rotate(10deg);
+}
+
+.cherry-stem:after {
+    content: "";
+    position: absolute;
+    border: 0 solid transparent;
+    border-top: 3px solid black;
+    border-radius: 20px 0 0 0;
+    top: -12px;
+    left: -14px;
+    width: 42px;
+    height: 20px;
+    transform: rotate(53deg);
 }
 
 /* ice cream cloud */
@@ -65,8 +101,8 @@ body {
 }
 
 .cone .l-three {
-    width: 71px;
-    left: -37px;
+    width: 57px;
+    left: -38px;
     bottom: 223px;
 }
 
@@ -99,7 +135,6 @@ body {
     height: 38px;
     background-color: brown;
     position: relative;
-    overflow: hidden;
     border-radius: 70%;
     top: 31px;
     right: 17px;
