--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,72 @@ body {
     right: 20px;
 }
 
+/* Ice cream happy face */
+.brows {
+    display: inline-flex;
+    position: relative;
+    bottom: 56px;
+}
+
+.brows .brow {
+    position: relative;
+    width: 0;
+    height: 0;
+    transform: rotate(10deg);
+}
+
+.brows .brow::after {
+    content: "";
+    position: absolute;
+    border: 0 solid transparent;
+    border-top: 3px solid black;
+    border-radius: 19px 19px 4px 4px;
+    top: -158px;
+    left: 26px;
+    width: 42px;
+    height: 20px;
+    transform: rotate(-16deg);
+}
+
+.brows .right-brow {
+    left: 52px;
+}
+
+.eyes {
+    display: inline-flex;
+    z-index: 8;
+    position: relative;
+    bottom: 140px;
+    left: 46px;
+}
+
+.eyes .eye {
+    width: 46px;
+    height: 42px;
+    background: white;
+    border-radius: 50%;
+    position: relative;
+    right: -2px;
+}
+
+.eyes .right-eye {
+    left: 5px;
+}
+
+.eyeball {
+    width: 12px;
+    height: 12px;
+    background: black;
+    border-radius: 50%;
+    position: relative;
+    right: 34px;
+    top: 0px;
+}
+
+.left-eye .eyeball {
+    right: -5px;
+}
+
 /* Cherry on scoop */
 .cherry {
     width: 57px;
