--- a/style.css
+++ b/style.css
@@ -368,4 +368,4 @@ body {
   box-shadow: 4px 7px 0px -4px #eebe7f;
 }
 
-/*# sourceMappingURL=styles.css.map */
+/*# sourceMappingURL=style.css.map */
